--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 					</div>
 					<p>
-				 Welcome to my website. I am an electronics hobbyist, digital content creator, and a second year computer science student. In the past few years I have worked on many independent projects alongside my formal education. I have knowledge in Java and C, experience designing custom electronic circuits, as well as building this website using responsive web technologies. Additionally, I am a chess player. I created this site to share my interests, as they evolve, and connect with like minded individuals.I spend a lot of time building software and electronics, but there’s also a lot more to it.
+				 Welcome to my website. I am an electronics hobbyist, digital content creator, and an all-time computer science student. In the past few years I have worked on many independent projects alongside my formal education. I have knowledge in Java and Cpp, Python as well as building this website using responsive web technologies. Additionally, I am a chess player. I created this site to share my interests, as they evolve, and connect with like minded individuals.I spend a lot of time building software and electronics, but there’s also a lot more to it.
 					</p>
 					<footer>
 						<a href="#" class="button">Get Started</a>
